--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
     </div>
   </div>
   	<p class="w3-large w3-center w3-padding-16">Completed modules:</p>
-  	 <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="http://www.open.ac.uk/courses/modules/mu123" target="_blank"></i>MU123 Discovering mathematics</p>
+  	 <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="" target="_blank"></i>Discovering mathematics</p>
     <div class="w3-progress-container w3-round-xlarge">
       <div class="w3-progressbar w3-round-xlarge w3-blue-grey" style="width:100%" style="color:blue"></div>
     </div> </a>
-  	<p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="http://www.open.ac.uk/courses/modules/tu100" target="_blank"></i>TU100 My digital life</p>
+  	<p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="" target="_blank"></i> My digital life</p>
     <div class="w3-progress-container w3-round-xlarge">
       <div class="w3-progressbar w3-round-xlarge w3-blue-grey" style="width:100%" style="color:blue"></div>
     </div></a>
-    <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="http://www.open.ac.uk/courses/modules/m250" target="_blank"></i>M250 Object-oriented Java programming</p>
+    <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="" target="_blank"></i>Object-oriented Java programming</p>
     <div class="w3-progress-container w3-round-xlarge">
       <div class="w3-progressbar w3-round-xlarge w3-blue-grey" style="width:100%" style="color:blue"></div>
     </div></a>
-    <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="http://www.open.ac.uk/courses/modules/tm129" target="_blank"></i>TM129 Technologies in practice</p>
+    <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="" target="_blank"></i> Technologies in practice</p>
     <div class="w3-progress-container w3-round-xlarge">
       <div class="w3-progressbar w3-round-xlarge w3-blue-grey" style="width:100%"></div>
     </div></a>
-    <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="http://www.open.ac.uk/courses/modules/tt284" target="_blank"></i>TT284 Web technologies</p>
+    <p class="w3-wide"><i class="fa fa-pencil-square-o"><a href="" target="_blank"></i> Web technologies</p>
     <div class="w3-progress-container w3-round-xlarge">
       <div class="w3-progressbar w3-round-xlarge w3-blue-grey" style="width:100%"></div>
     </div></a>
